# tsg-billing

./: CMakeLists.txt  README.md  main.cpp  postinst
.github/workflows/: build-deb.yml
configuration/: cfg.json
db/: tsg-billing.json
src/: main.cpp  tsg-billing.cpp  tsg-billing.hpp
systemd/: tsg-billing.service
